Contact List using Redux

--- a/package.json
+++ b/package.json
@@ -1,16 +1,21 @@
 {
-  "name": "contact-list-redux",
+  "name": "class2-practice",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@reduxjs/toolkit": "^1.1.0",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
+    "@testing-library/jest-dom": "^5.11.4",
+    "@testing-library/react": "^11.1.0",
+    "@testing-library/user-event": "^12.1.10",
+    "bootstrap": "^5.0.0-alpha1",
+    "history": "^5.0.0",
     "react": "^17.0.1",
+    "react-avatar": "^3.10.0",
     "react-dom": "^17.0.1",
-    "react-redux": "^7.1.3",
-    "react-scripts": "4.0.3"
+    "react-redux": "^7.2.2",
+    "react-router-dom": "^6.0.0-beta.0",
+    "react-scripts": "4.0.0",
+    "redux": "^4.0.5",
+    "web-vitals": "^0.2.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -19,7 +24,10 @@
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
-    "extends": "react-app"
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
   },
   "browserslist": {
     "production": [
